# receipt_mail

./: .gitignore  LICENSE.txt  Pipfile  amazon.py  bookwalker.py  clean.py  config_base.yaml  download.py  melonbooks.py  pyproject.toml  utility.py  yodobashi.py
receipt_mail/: _mail.py
receipt_mail/amazon/: _mail.py
receipt_mail/bookwalker/: __init__.py  _mail.py
receipt_mail/melonbooks/: __init__.py  _mail.py
receipt_mail/yodobashi/: __init__.py  _mail.py
