[tool.poetry]
name = "receipt_mail"
version = "0.1.0"
description = ""
authors = ["085astatine <astatine085@gmail.com>"]
license = ""
packages = [{include = "receipt_mail"}]

[tool.poetry.dependencies]
python = "^3.10"
imapclient = "^2.3.1"
mypy-extensions = "^1.0.0"
pytz = "^2023.3"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
